--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="wrapper">
         <div class="background">
             <div class="container1">
-                <img src="../assests/gradient-violet-bg.jpg" width="100%" height="900">
+                <img src="./assests/gradient-violet-bg.jpg" width="100%" height="900">
                 <div class="watchParty">
                     <div class="header1">
                         <header>
                             
                             <div class="kastButton">
                                 
-                                    <img src="../assests/kast-logo-horizontal-color-white.svg" width="200px"
+                                    <img src="./assests/kast-logo-horizontal-color-white.svg" width="200px"
                                         height="200px">
                             </div>
                             <div class="right5Buttons">
@@ -45,7 +45,7 @@
                         </header>
                     </div>
                     <div class="laptop">
-                        <img src="../assests/laptop-table.png" width="850" height="525">
+                        <img src="./assests/laptop-table.png" width="850" height="525">
                     </div>
 
                     <div class="text1">
@@ -72,29 +72,29 @@
         <div class="image-div">
             <div class="image-container-1">
                 <div>
-                    <img src="../assests/wired-logo.svg">
+                    <img src="./assests/wired-logo.svg">
                 </div>
                 <br />
                 <div>
-                    <img src="../assests/nerdist-logo.svg">
+                    <img src="./assests/nerdist-logo.svg">
                 </div>
                 <br />
                 <div>
-                    <img src="../assests/yahoo-finance-logo.svg">
+                    <img src="./assests/yahoo-finance-logo.svg">
                 </div>
             </div>
             <br />
             <div class="image-container-2">
                 <div>
-                    <img src="../assests/evening-standard-logo.svg">
+                    <img src="./assests/evening-standard-logo.svg">
                 </div>
                 <br />
                 <div>
-                    <img src="../assests/bbc-logo.svg">
+                    <img src="./assests/bbc-logo.svg">
                 </div>
                 <br />
                 <div>
-                    <img src="../assests/daily-mail-logo.svg">
+                    <img src="./assests/daily-mail-logo.svg">
                 </div>
             </div>
         </div>
